# unity-dumper

./: AUTHORS.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  USAGE.md  main.cpp
Tests/: AudioRealValidation.cpp  CMakeLists.txt  FullPipelineTest.cpp  LZMATest.cpp  MeshRealValidation.cpp  ParserTests.cpp  PluginTests.cpp  TextureValidation.cpp
Unity-dumer/Archives/: AddressableReader.h  ArchiveReader.h  AssetBundleReader.h  BlockReader.cpp  BlockReader.h  Compression.cpp  Compression.h  SerializedFile.cpp  SerializedFile.h  UnityFSParser.cpp  UnityFSParser.h
Unity-dumer/Core/: AssetManager.cpp  AssetManager.h  Config.h  EventSystem.h  Logger.h  ResourceEntry.h  ResourceIndex.cpp  ResourceIndex.h  RuntimeContext.h  Serialization.h  TargetContext.h
Unity-dumer/Core/Diagnostics/: BuildReport.h
Unity-dumer/Diagnostics/: asset_audit.json  code_audit.json  export_path.json  release_package.json  stub_report.json  unity_support.json
Unity-dumer/Export/: DumpExporter.cpp  DumpExporter.h  ExportValidator.cpp  ExportValidator.h
Unity-dumer/IL2CPP/Analysis/: MetadataAnalyzer.cpp  MetadataAnalyzer.h
Unity-dumer/IL2CPP/Export/: SDKExporter.cpp  SDKExporter.h
Unity-dumer/IL2CPP/Metadata/: MetadataLoader.h  MetadataReader.cpp  MetadataReader.h
Unity-dumer/IL2CPP/Structures/: Il2CppDefinitions.h  Il2CppGlobalMetadataHeader.h  Il2CppStructures.h
Unity-dumer/Pipeline/: Pipeline.cpp  Pipeline.h
Unity-dumer/Plugins/: IUnityModule.h  ModuleLoader.cpp  ModuleLoader.h
Unity-dumer/Runtime/: AndroidBridge.cpp  AndroidBridge.h  AssemblyScanner.cpp  AssemblyScanner.h  ClassInspector.cpp  ClassInspector.h  FieldInspector.h  Il2CppRuntimeBridge.cpp  Il2CppRuntimeBridge.h  MemoryReader.cpp  MemoryReader.h  RuntimeDumper.cpp  RuntimeDumper.h
Unity-dumer/Runtime/BinaryFormats/: Elf.cpp  Elf.h  PE.cpp  PE.h
Unity-dumer/Runtime/Offsets/: OffsetDatabase.h  OffsetLoader.h  OffsetManager.cpp  OffsetManager.h  OffsetProfile.h  UnityOffsets.h
Unity-dumer/Scripts/: ScriptAnalyzer.cpp  ScriptAnalyzer.h  ScriptEntry.h
Unity-dumer/Unity/: Il2CppAnalyzer.cpp  Il2CppAnalyzer.h  MonoAnalyzer.cpp  MonoAnalyzer.h  ObjectInspector.cpp  ObjectInspector.h  UnityRuntimeDetector.cpp  UnityRuntimeDetector.h  UnityScanner.cpp  UnityScanner.h  VersionAdapters.h
Unity-dumer/Unity/Il2CppMetadata/: Il2CppMetadata.h  Il2CppMetadataReader.cpp  Il2CppMetadataReader.h
Unity-dumer/Unity/Objects/: ObjectReader.cpp  ObjectReader.h
docs/: ARCHITECTURE.md
(+1 files in other folders)
